--- a/menu.html
+++ b/menu.html
@@ -34,10 +34,10 @@ You can enjoy your favorite bubble tea flavors right at home with the convenienc
 
 <div class="delivery-logos">
     <a href="https://deliveroo.com" target="_blank">
-        <img src="../images/deliveroo.jpg" alt="Deliveroo Logo">
+        <img src="./images/deliveroo.jpg" alt="Deliveroo Logo">
     </a>
     <a href="https://ubereats.com" target="_blank">
-        <img src="../images/ubereats.jpg" alt="Uber Eats Logo">
+        <img src="./images/ubereats.jpg" alt="Uber Eats Logo">
     </a>
 </div>
 	<div class="container">
