--- a/contactus.html
+++ b/contactus.html
@@ -30,7 +30,7 @@
   </nav>
 
   <div class="contact-box" id="contact">
-      <h2>Contact</h2>
+      <h3>Contact</h3>
       <p>For any inquiries, reach out to us:</p>
       <ul>
           <li>Email: <a href="mailto:info@magicdreambubble.com">info@magicdreambubble.com</a></li>
@@ -39,7 +39,7 @@
   </div>
 
   <div class="contact-box" id="get-in-touch">
-      <h2>Get in Touch</h2>
+      <h3>Get in Touch</h3>
       <p>Let's connect and discuss your needs:</p>
       <form>
           <label for="name">Your Name</label>
@@ -56,7 +56,7 @@
   </div>
 
   <div class="contact-box" id="address">
-      <h2>Address</h2>
+      <h3>Address</h3>
       <p>Visit our office:</p>
       <address>
           4 Magic Dream Bubble, Highstreet, Frankfurt.<br>
@@ -66,8 +66,8 @@
 
   <!-- Google Map -->
   <div id="map">
-      <h2>Our Location</h2>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2625.337392255434!2d2.294481015675867!3d48.858844379287664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66fdfd970e07f%3A0x421a6b9a6f8a8e0c!2sEiffel%20Tower!5e0!3m2!1sen!2sfr!4v1624437448194!5m2!1sen!2sfr" width="1500" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      <h3>Our Location</h3>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2564.470010850578!2d8.663737615714396!3d50.11064477942968!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bda6761f5df5e5%3A0xb0d63458da08630e!2sFrankfurt%20Central%20Station!5e0!3m2!1sen!2sde!4v1624444461504!5m2!1sen!2sde" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
   </div>
 
   <!-- Footer -->
@@ -88,3 +88,4 @@
   </footer>
 </body>
 </html>
+
