--- a/contactus.html
+++ b/contactus.html
@@ -33,7 +33,7 @@
       <h3>Contact</h3>
       <p>For any inquiries, reach out to us:</p>
       <ul>
-          <li>Email: <a href="mailto:info@magicdreambubble.com">info@magicdreambubble.com</a></li>
+          <li>Email: <a href="mailto:info@magicdreambubble.com">Mailus</a></li>
           <li>Phone: <a href="tel:+49654782569">+49 6547 82569</a></li>
       </ul>
   </div>
