--- a/signup.html
+++ b/signup.html
@@ -57,6 +57,12 @@
             </form>
 
         </section>
+		<script>
+        function showConfirmation() {
+            alert("Thank you for signing up!");
+            return true; // Proceed with form submission
+        }
+    </script>
     </main>
  <!-- Footer -->
  <footer>
