--- a/formconfirmation.html
+++ b/formconfirmation.html
@@ -31,7 +31,9 @@
         <!--Form Confirmation Section-->
         <section class="form-section">
             <form method="get" action="formconfirmation.html" class="signup-form">
-                <h2>Thank you for signing up for magic dream bubble News letter.</h2>
+                <h2>Thank you for subscribing to our newsletter! We're thrilled to have you on board. Click <a href="index.html"
+                        id="confirmation-link" aria-label="Click on this link to go back to the home page">here</a> to
+                    get back to the Home Page.</h2>
 
             </form>
         </section>
